# espeak-ng

./: .gitignore  .gitmodules  .project  .travis.yml  .~lock.tests.tsv#  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COPYING.BSD2  COPYING.IEEE  ChangeLog.md  DartConfiguration.tcl  Dockerfile.multiarch  FINAL_SWEDISH_IMPROVEMENTS_REPORT.md  Hadrianus  Makefile  Makefile.am  QWS.lnk  README  README-CA.md  README.md  a  autogen.sh  configure.ac  espeak-ng.pc.in  language-pronunciation.test  mkdictlist  mytest.ipynb  ph_spanish  python_test.py  shadowdir  test2.tsv  tests.tsv  tulox Freeware Englisch.lnk  wc  💩
.github/: copilot-instructions.md
.tx/: config
_layouts/: webpage.html
android/: AndroidManifest.xml  CLAUDE.md  build.gradle  build.gradle.kts  ci-test.sh  gradle.properties  mkicons.sh  remove_string.sh  settings.gradle  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/: config.h
android/app/src/main/cpp/jni/: eSpeakService.c
chromium_extension/: AudioStream.js  README.md  background.js  index.php  local_server.sh  manifest.json  nativeTransferableStream.html  nativeTransferableStream.js  native_messaging_espeakng.json  nm_espeakng.json  nm_espeakng.sh
cmake/: config.cmake  data.cmake  deps.cmake  docs.cmake  msys2path.cmake  package.cmake
data/: ReadMe  ReadMe,fff  english_extra  english_list  english_rules  esperanto_list  esperanto_rules  german_list  german_rules
dictsource/: .ca_rules.kate-swp  ReadMe  ab_list  ab_rules  ady_list  ady_rules  af_emoji  af_list  af_rules  ak_rules  am_emoji  am_list  am_rules  an_list  an_rules  aol_list  aol_rules  ar_emoji  ar_list  ar_listx  ar_rules  as_list  as_rules  ay_list  ay_rules  az_emoji  az_list  az_rules  ba_list  ba_rules  be_list  be_rules  bg_emoji  bg_list  bg_listx  bg_rules  bn_emoji  bn_list  bn_rules  bo_rules  (+401 more)
docs/: README.md  ReleaseNotes.md  add_language.html  add_language.md  analyse.html  analyse.md  building-ac.md  building.md  commands.html  commands.md  configuration.md  contributing.md  dictionary.html  dictionary.md  docindex.html  download.html  editor.html  editor.md  editor_if.html  editor_if.md  guide.md  index.html  index.md  integration.md  (+19 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.espeakedit  Makefile_pulseaudio  android_wchar.cpp  android_wchar.h  case.c  case.cpp  categories.c  categories.cpp  compiledata.cpp  compiledict.cpp  ctype.c  ctype.cpp  debug.cpp  debug.h  dictionary.cpp  espeak-ng.1.ronn  espeak-ng.c  espeak.c  espeak.cpp  espeak_command.cpp  espeak_command.h  espeakedit.cpp  espeakedit.h  event.cpp  event.h  extras.cpp  fifo.cpp  fifo.h  formantdlg.cpp  intonation.cpp  klatt.cpp  klatt.h  main.h  mbrolib.h  mbrowrap.cpp  menus.cpp  numbers.cpp  (+50 more)
src/com/googlecode/eyesfree/espeak/: DownloadVoiceData.java  SpeechSynthesis.java  TtsService.java  eSpeakActivity.java
src/compat/: getopt.c
src/include/compat/: endian.h  getopt.h  math.h  stdint.h  stdio.h  string.h  strings.h  unistd.h  wchar.h  wctype.h
src/include/compat/sys/: stat.h
src/include/espeak/: speak_lib.h
src/include/espeak-ng/: encoding.h  espeak_ng.h  speak_lib.h  tokenizer.h
src/include/ucd/: ucd.h
src/libespeak-ng/: CMakeLists.txt  common.c  common.h  compiledata.c  compiledict.c  compiledict.h  compilembrola.c  config.h.in  debug.c  debug.h  dictionary.c  dictionary.h  encoding.c  encoding.h  error.c  error.h  espeak_api.c  espeak_command.c  espeak_command.h  event.c  event.h  fifo.c  fifo.h  ieee80.c  ieee80.h  intonation.c  intonation.h  klatt.c  klatt.h  langopts.c  langopts.h  mbrowrap.c  mbrowrap.h  mnemonics.c  mnemonics.h  numbers.c  numbers.h  phoneme.c  phoneme.h  phonemelist.c  (+39 more)
src/speechPlayer/: CMakeLists.txt
src/speechPlayer/include/: speechPlayer.h
src/speechPlayer/src/: frame.c  frame.cpp  frame.h  sample.h  speechPlayer.c  speechPlayer.cpp  speechPlayer.h  speechWaveGenerator.cpp  speechWaveGenerator.h  utils.h  waveGenerator.h
src/ucd-tools/: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING.UCD  Makefile.am  README.md  autogen.sh  configure.ac
src/ucd-tools/data/espeak-ng/: PropList.txt  emoji-data.txt
src/ucd-tools/src/: case.c  categories.c  ctype.c  proplist.c  scripts.c  tostring.c
src/ucd-tools/src/include/ucd/: ucd.h
src/ucd-tools/tests/: printcdata.c  printucddata.c  printucddata_cpp.cpp
src/ucd-tools/tools/: case.py  categories.py  printdata.py  scripts.py
src/windows/: UpgradeLog.htm  config.h  data.vcxproj  espeak-ng.sln  espeak-ng.vcxproj  espeak-ng.vcxproj.filters  libespeak-ng.def  libespeak-ng.vcxproj  libespeak-ng.vcxproj.filters
src/windows/com/: comentrypoints.c  ttsengine.cpp
src/windows/installer/: License_GPLv3.rtf  Product.wxs  installer.wixproj
tests/: CMakeLists.txt  api.c  bom.test  cmd_options.test  common  crash.test  datalint.test  dictionary.test  dummy.cpp  encoding.c  fuzzrunner.c  ieee80.c  klatt.test  language-numbers-cardinal.test  language-numbers-ordinal.test  language-phonemes.test  language-pronunciation.test  language-replace.test  languages.test  mbrola.test  minimize-corpus.sh  my_fuzzer.c  non-executable-files-with-executable-bit.test  phoneme-audio.test  phoneme-output.test  printcdata.c  printucddata.c  printucddata.cpp  printucddata_cpp.cpp  readclause.c  ssml-fuzzer.c  ssml.test  synth-fuzzer.c  synth_fuzzer.c  test_assert.h  tokenizer.c  translate.test  variants.test  voices.c  voices.test  (+2 more)
tests/crash_vectors/: cve-2023-49990.txt  cve-2023-49991.txt  cve-2023-49992.txt  cve-2023-49993.txt  cve-2023-49994.txt
tests/fuzzing/: README.md  create_dict_corpus.sh  create_dict_corpus_file.py  minimize-corpus.sh  synth_fuzzer.c
tests/fuzzing/CORPUS_DIR/: af_emoji  fi_emoji  ja_emoji
tests/ssml/: badly-escaped1.expected  badly-escaped1.ssml  badly-escaped2.expected  badly-escaped2.ssml  billion-laughs.expected  billion-laughs.ssml  external-entity.expected  external-entity.ssml  language-switch.expected  language-switch.ssml  malformed-tag1.ssml  references.expected  references.ssml2  spec-example-1.expected  spec-example-1.ssml
(+2705 files in other folders)
